📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -17310,5 +17310,117 @@
         "published": "Sat, 13 Dec 2025 22:30:50 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46258830\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/17/google-deepens-consumer-credit-push-in-india-with-upi-linked-card/",
+        "title": "Google deepens consumer credit push in India with UPI-linked card",
+        "link": "https://techcrunch.com/2025/12/17/google-deepens-consumer-credit-push-in-india-with-upi-linked-card/",
+        "published": "Wed, 17 Dec 2025 10:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Google has entered India's growing co-branded credit card market by partnering with Axis Bank."
+    },
+    {
+        "id": "https://www.engadget.com/computing/laptops/best-chromebooks-160054646.html?src=rss",
+        "title": "The best Chromebook you can buy in 2026",
+        "link": "https://www.engadget.com/computing/laptops/best-chromebooks-160054646.html?src=rss",
+        "published": "Wed, 17 Dec 2025 10:01:26 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Chromebooks have quietly become some of the most useful laptops for everyday tasks. They boot fast, stay secure with automatic updates and often cost far less than traditional Windows or Mac machines. Modern Chromebooks also look and feel better than ever, with brighter screens, stronger processors and designs that range from simple clamshells to flexible 2-in-1s.<br /><br />Whether you need a laptop for school, streaming or a portable option for travel, there is likely a Chromebook that fits"
+    },
+    {
+        "id": "https://gizmodo.com/trump-reportedly-pausing-40-billion-ai-and-quantum-deal-with-uk-2000700305",
+        "title": "Trump Reportedly Pausing $40 Billion AI and Quantum Deal With UK",
+        "link": "https://gizmodo.com/trump-reportedly-pausing-40-billion-ai-and-quantum-deal-with-uk-2000700305",
+        "published": "Wed, 17 Dec 2025 10:00:17 +0000",
+        "source": "Gizmodo",
+        "summary": "The President is allegedly leveraging the pause to push for looser food and online safety regulations in the UK"
+    },
+    {
+        "id": "https://mashable.com/article/best-netflix-tv-shows-2025-list",
+        "title": "The 20 best Netflix TV shows of 2025",
+        "link": "https://mashable.com/article/best-netflix-tv-shows-2025-list",
+        "published": "Wed, 17 Dec 2025 09:45:11 +0000",
+        "source": "Mashable",
+        "summary": "From \"Adolescence\" and \"The Four Seasons\" to \"Forever\" and \"Running Point,\" here are the best Netflix shows of 2025 so far."
+    },
+    {
+        "id": "https://mashable.com/gifts/best-gifts-for-mom-2025",
+        "title": "Best gifts for mom 2025: 60+ thoughtful gift ideas that she probably doesnt have yet",
+        "link": "https://mashable.com/gifts/best-gifts-for-mom-2025",
+        "published": "Wed, 17 Dec 2025 09:26:13 +0000",
+        "source": "Mashable",
+        "summary": "The best gifts for moms, including non-clich\u00e9 gift ideas she'll love for Mother's Day, Christmas, or her birthday."
+    },
+    {
+        "id": "https://mashable.com/video/finn-wolfhard-teases-final-4-stranger-things-episodes",
+        "title": "Finn Wolfhard teases the final 4 Stranger Things episodes with a word each",
+        "link": "https://mashable.com/video/finn-wolfhard-teases-final-4-stranger-things-episodes",
+        "published": "Wed, 17 Dec 2025 09:11:49 +0000",
+        "source": "Mashable",
+        "summary": "Finn Wolfhard teased the final four episodes of \"Stranger Things\" on \"The Tonight Show\", using a one-word clue for each."
+    },
+    {
+        "id": "https://mashable.com/article/how-to-spot-ai-audiobooks-libby",
+        "title": "AI audiobooks have come to Libby; heres how to spot them",
+        "link": "https://mashable.com/article/how-to-spot-ai-audiobooks-libby",
+        "published": "Wed, 17 Dec 2025 08:53:00 +0000",
+        "source": "Mashable",
+        "summary": "AI has come to Libby, a beloved app for readers. AI-narrated audiobooks are everywhere on the app, but there's an easy way to avoid them. Here's how to spot AI audiobooks on Libby."
+    },
+    {
+        "id": "https://readwrite.com/gambling-commission-unveil-new-illegal-gambling-tool/",
+        "title": "UK Gambling Commission unveil new illegal gambling website identification tool",
+        "link": "https://readwrite.com/gambling-commission-unveil-new-illegal-gambling-tool/",
+        "published": "Wed, 17 Dec 2025 10:09:48 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"UK posts massive $22B in gambling industry earnings. Gambling Commission logo on top of blurred image of betting shop. UK Gambling Commission unveils new illegal gambling website identification tool\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/11/uk-gc-generic-2-300x200.jpg\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>The UK&#8217;s Gambling Commission has unveiled a new t"
+    },
+    {
+        "id": "https://www.zdnet.com/article/my-3-favorite-ai-tools/",
+        "title": "I test AI for a living, and these 3 free tools are the ones I used most in 2025",
+        "link": "https://www.zdnet.com/article/my-3-favorite-ai-tools/",
+        "published": "Wed, 17 Dec 2025 10:09:17 GMT",
+        "source": "Latest news",
+        "summary": "For three years, I have been covering every new AI model and tool that emerges, but only these three made my 2025 daily rotation."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-lenovo-laptop/",
+        "title": "The best Lenovo laptops of 2025: Expert tested and reviewed",
+        "link": "https://www.zdnet.com/article/best-lenovo-laptop/",
+        "published": "Wed, 17 Dec 2025 10:01:07 GMT",
+        "source": "Latest news",
+        "summary": "Lenovo makes great laptops, but with an extensive catalog of products, it's hard to find the right device. Here are the best Lenovo laptops I've tested."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-sports-watch/",
+        "title": "The best sports watches of 2025: Expert tested and reviewed",
+        "link": "https://www.zdnet.com/article/best-sports-watch/",
+        "published": "Wed, 17 Dec 2025 10:00:47 GMT",
+        "source": "Latest news",
+        "summary": "I've extensively tested the best sports watches that track metrics for sleep, recovery, and guidance for further training -- no coach required."
+    },
+    {
+        "id": "https://www.zdnet.com/article/zdnet-writers-favorite-products-2025/",
+        "title": "The tech products ZDNET staffers couldn't live without this year",
+        "link": "https://www.zdnet.com/article/zdnet-writers-favorite-products-2025/",
+        "published": "Wed, 17 Dec 2025 09:31:29 GMT",
+        "source": "Latest news",
+        "summary": "See what we loved (and what surprised us) this year."
+    },
+    {
+        "id": "https://infosec.press/brunomiguel/is-mozilla-trying-hard-to-kill-itself",
+        "title": "Is Mozilla trying hard to kill itself?",
+        "link": "https://infosec.press/brunomiguel/is-mozilla-trying-hard-to-kill-itself",
+        "published": "Wed, 17 Dec 2025 09:37:24 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46299934\">Comments</a>"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/roblox-brings-ai-into-the-studio-to-speed-up-game-creation/",
+        "title": "Roblox brings AI into the Studio to speed up game creation",
+        "link": "https://www.artificialintelligence-news.com/news/roblox-brings-ai-into-the-studio-to-speed-up-game-creation/",
+        "published": "Wed, 17 Dec 2025 10:00:00 +0000",
+        "source": "AI News",
+        "summary": "<p>Roblox is often seen as a games platform, but its day-to-day reality looks closer to a production studio. Small teams release new experiences on a rolling basis and then monetise them at scale. That pace creates two persistent problems: time lost to repeatable production work, and friction when moving outputs between tools. Roblox\u2019s 2025 updates [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/roblox-brings-ai-into-the-studio-to-speed-up-game-creation/\">Robl"
     }
 ]
