📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -17422,5 +17422,117 @@
         "published": "Wed, 17 Dec 2025 10:00:00 +0000",
         "source": "AI News",
         "summary": "<p>Roblox is often seen as a games platform, but its day-to-day reality looks closer to a production studio. Small teams release new experiences on a rolling basis and then monetise them at scale. That pace creates two persistent problems: time lost to repeatable production work, and friction when moving outputs between tools. Roblox\u2019s 2025 updates [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/roblox-brings-ai-into-the-studio-to-speed-up-game-creation/\">Robl"
+    },
+    {
+        "id": "https://www.wired.com/story/dei-died-this-year-maybe-it-was-supposed-to/",
+        "title": "DEI Died This Year. Maybe It Was Supposed To",
+        "link": "https://www.wired.com/story/dei-died-this-year-maybe-it-was-supposed-to/",
+        "published": "Wed, 17 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "I\u2019m a Black staffer at WIRED. My position feels more precarious than ever. There\u2019s a reason for that."
+    },
+    {
+        "id": "https://www.wired.com/story/tuft-and-needle-pillow-deal-2025/",
+        "title": "Tuft & Needle Is Offering a Free Pillow Set With Mattress Purchase",
+        "link": "https://www.wired.com/story/tuft-and-needle-pillow-deal-2025/",
+        "published": "Wed, 17 Dec 2025 10:32:00 +0000",
+        "source": "WIRED",
+        "summary": "Get nearly everything you need to prep your guest room ahead of the holidays."
+    },
+    {
+        "id": "https://www.wired.com/story/microsoft-will-finally-kill-an-encryption-cipher-that-enabled-a-decade-of-windows-hacks/",
+        "title": "Microsoft Will Finally Kill an Encryption Cipher That Enabled a Decade of Windows Hacks",
+        "link": "https://www.wired.com/story/microsoft-will-finally-kill-an-encryption-cipher-that-enabled-a-decade-of-windows-hacks/",
+        "published": "Wed, 17 Dec 2025 10:30:00 +0000",
+        "source": "WIRED",
+        "summary": "The weak RC4 for administrative authentication has been a hacker holy grail for decades."
+    },
+    {
+        "id": "https://www.engadget.com/ai/amazon-in-talks-to-invest-10-billion-in-openai-and-supply-its-trainium-chips-103653151.html?src=rss",
+        "title": "Amazon in talks to invest $10 billion in OpenAI and supply its Trainium chips",
+        "link": "https://www.engadget.com/ai/amazon-in-talks-to-invest-10-billion-in-openai-and-supply-its-trainium-chips-103653151.html?src=rss",
+        "published": "Wed, 17 Dec 2025 10:36:53 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Amazon is in discussions with OpenAI to invest $10 billion in the company while supplying more of its AI chips and cloud computing services, according to <a href=\"https://www.ft.com/content/4217107e-2c98-4b78-9961-67d75237fac4\"><em>The Financial Times</em></a>. The deal would push OpenAI's valuation over $500 billion but is likely to raise more questions about the company's circular investment agreements involving chips and data centers.&nbsp;</p>\n<p>The two companies are also in talks about "
+    },
+    {
+        "id": "https://gizmodo.com/astronomers-may-have-finally-solved-the-mystery-of-these-freaky-blue-cosmic-flashes-2000700354",
+        "title": "Astronomers May Have Finally Solved the Mystery of These Freaky Blue Cosmic Flashes",
+        "link": "https://gizmodo.com/astronomers-may-have-finally-solved-the-mystery-of-these-freaky-blue-cosmic-flashes-2000700354",
+        "published": "Wed, 17 Dec 2025 11:05:50 +0000",
+        "source": "Gizmodo",
+        "summary": "Astronomers call them LFBOTs\u2014rare and powerful bursts of blue light that shine across billions of light-years and then vanish in just a few days."
+    },
+    {
+        "id": "https://gizmodo.com/fallout-season-3-todd-howard-game-tie-ins-2000700576",
+        "title": "Bethesda Is Trying to Figure Out What \u2018Fallout\u2019 Games Season 3 Might Tie Into",
+        "link": "https://gizmodo.com/fallout-season-3-todd-howard-game-tie-ins-2000700576",
+        "published": "Wed, 17 Dec 2025 11:00:08 +0000",
+        "source": "Gizmodo",
+        "summary": "Season two of the Prime Video adaptation might have only just kicked off, but Bethesda is already looking to the future\u2014of both the show and the games."
+    },
+    {
+        "id": "https://mashable.com/article/dec-17-samsung-galaxy-watch-7-deal",
+        "title": "The Samsung Galaxy Watch 7 is at to its lowest-ever price at Amazon \u2014 act fast to save $120",
+        "link": "https://mashable.com/article/dec-17-samsung-galaxy-watch-7-deal",
+        "published": "Wed, 17 Dec 2025 10:11:38 +0000",
+        "source": "Mashable",
+        "summary": "Get the best Samsung Galaxy Watch deal at Amazon. Save 48% on the Samsung Galaxy Watch 7 at Amazon."
+    },
+    {
+        "id": "https://mashable.com/article/dec-17-insignia-tv-deal",
+        "title": "The Insignia 50-inch Class F50 TV just got another discount \u2014 save $130 right now",
+        "link": "https://mashable.com/article/dec-17-insignia-tv-deal",
+        "published": "Wed, 17 Dec 2025 10:04:35 +0000",
+        "source": "Mashable",
+        "summary": "Get the best TV deal at Amazon. Save 43% on the Insignia 50-inch Class F50 at Amazon."
+    },
+    {
+        "id": "https://mashable.com/article/best-tv-shows-2025-list",
+        "title": "The 10 best TV shows of 2025, and where to stream them now",
+        "link": "https://mashable.com/article/best-tv-shows-2025-list",
+        "published": "Wed, 17 Dec 2025 10:03:35 +0000",
+        "source": "Mashable",
+        "summary": "From \"Severance\" and \"Adolescence\" to \"The Pitt\" and \"Andor,\" here are our top 10 TV shows of 2025. Plus, how to watch them."
+    },
+    {
+        "id": "https://mashable.com/article/top-tech-trends-2026-foldable-phones-humanoid-robots-smart-glasses-ai",
+        "title": "The top 10 tech trends Im watching in 2026: Apple on the back foot, smart glasses, and AI companions",
+        "link": "https://mashable.com/article/top-tech-trends-2026-foldable-phones-humanoid-robots-smart-glasses-ai",
+        "published": "Wed, 17 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Mashable's tech editor forecasts the top tech trends to know as we head into 2026. Expect fleets of AI robots and foldable displays to dominate headlines."
+    },
+    {
+        "id": "https://mashable.com/article/jordan-the-stallion-interview-tiktok-awards-creator-playbook",
+        "title": "How Jordan The Stallion became inescapable on TikTok",
+        "link": "https://mashable.com/article/jordan-the-stallion-interview-tiktok-awards-creator-playbook",
+        "published": "Wed, 17 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Jordan The Stallion is all over TikTok, racking up millions upon millions of views. He shared his backstory with Mashable."
+    },
+    {
+        "id": "https://readwrite.com/gemini-predictions-now-live/",
+        "title": "Gemini Predictions is now live, another prediction market enters industry",
+        "link": "https://readwrite.com/gemini-predictions-now-live/",
+        "published": "Wed, 17 Dec 2025 10:33:48 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Orange background with &#039;Make your predictions&#039; written in white in top half of the image. Below, is an open laptop screen with the Gemini Predictions screen up showing different questions. Gemini Predictions is now live, another prediction market enters industry\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/ATS-24-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" />"
+    },
+    {
+        "id": "https://readwrite.com/federal-judge-denies-kalshis-motion-nevada/",
+        "title": "Federal judge denies Kalshi\u2019s motion to continue in Nevada",
+        "link": "https://readwrite.com/federal-judge-denies-kalshis-motion-nevada/",
+        "published": "Wed, 17 Dec 2025 10:18:16 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Green background with Kalshi logo in the middle in black. Judge denies injunction as California Tribes&#039; case against Kalshi falters. Federal judge denies Kalshi&#039;s motion to continue in Nevada\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/11/BF-16-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>Nevada federal judge Andrew Gordon has denied Kalshi\u2019s motion "
+    },
+    {
+        "id": "http://muratbuffalo.blogspot.com/2025/12/tla-modeling-tips.html",
+        "title": "TLA+ Modeling Tips",
+        "link": "http://muratbuffalo.blogspot.com/2025/12/tla-modeling-tips.html",
+        "published": "Wed, 17 Dec 2025 08:05:30 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46299389\">Comments</a>"
     }
 ]
