📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -17534,5 +17534,157 @@
         "published": "Wed, 17 Dec 2025 08:05:30 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46299389\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/17/amazon-reportedly-in-talks-to-invest-10b-in-openai-as-circular-deals-stay-popular/",
+        "title": "Amazon reportedly in talks to invest $10B in OpenAI as circular deals stay popular",
+        "link": "https://techcrunch.com/2025/12/17/amazon-reportedly-in-talks-to-invest-10b-in-openai-as-circular-deals-stay-popular/",
+        "published": "Wed, 17 Dec 2025 12:03:36 +0000",
+        "source": "TechCrunch",
+        "summary": "Amazon is in early discussions to invest as much as $10 billion in OpenAI in a deal that would see the AI lab using the e-commerce giant's AI chips."
+    },
+    {
+        "id": "https://www.theverge.com/news/846152/tesla-autopilot-marketing-deceptive-california-dmv",
+        "title": "Tesla misled customers about self-driving features, judge rules",
+        "link": "https://www.theverge.com/news/846152/tesla-autopilot-marketing-deceptive-california-dmv",
+        "published": "2025-12-17T06:48:33-05:00",
+        "source": "The Verge",
+        "summary": "Tesla could be temporarily locked out of its biggest US market if it doesn't change deceptive marketing that exaggerates the self-driving capabilities of its cars, the California Department of Motor Vehicles warned on Tuesday, adopting the ruling of an administrative law judge. The DMV said Tesla's use of terms like \"Autopilot\" and \"Full Self-Driving\" to [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/how-to-watch-the-ursids-meteor-shower/",
+        "title": "How to Watch the Final Meteor Shower of 2025",
+        "link": "https://www.wired.com/story/how-to-watch-the-ursids-meteor-shower/",
+        "published": "Wed, 17 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Conditions in the US should be perfect for the final meteor shower of 2025, with no moonlight present to interfere with spotting shooting stars."
+    },
+    {
+        "id": "https://www.wired.com/story/people-are-paying-to-get-their-chatbots-high-on-drugs/",
+        "title": "People Are Paying to Get Their Chatbots High on \u2018Drugs\u2019",
+        "link": "https://www.wired.com/story/people-are-paying-to-get-their-chatbots-high-on-drugs/",
+        "published": "Wed, 17 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "An online marketplace is selling code modules that simulate the effects of cannabis, ketamine, cocaine, ayahuasca, and alcohol when they are uploaded to ChatGPT."
+    },
+    {
+        "id": "https://www.wired.com/story/apple-manufacturing-academy-michigan/",
+        "title": "Apple Engineers Are Inspecting Bacon Packaging to Help Level Up US Manufacturers",
+        "link": "https://www.wired.com/story/apple-manufacturing-academy-michigan/",
+        "published": "Wed, 17 Dec 2025 11:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Initial participants in the new Apple Manufacturing Academy tell WIRED that the tech giant\u2019s surprising frankness and hands-on support are already benefiting their bottom lines."
+    },
+    {
+        "id": "https://www.wired.com/story/a-brain-computer-interface-company-is-getting-into-organ-preservation/",
+        "title": "Former Neuralink Exec Launches Organ Preservation Effort",
+        "link": "https://www.wired.com/story/a-brain-computer-interface-company-is-getting-into-organ-preservation/",
+        "published": "Wed, 17 Dec 2025 11:15:00 +0000",
+        "source": "WIRED",
+        "summary": "Science Corporation, founded by Neuralink\u2019s first president, Max Hodak, has unveiled a prototype machine to extend the life of organs for longer periods."
+    },
+    {
+        "id": "https://gizmodo.com/the-weirdest-medical-cases-of-2025-2000699833",
+        "title": "The Weirdest Medical Cases of 2025",
+        "link": "https://gizmodo.com/the-weirdest-medical-cases-of-2025-2000699833",
+        "published": "Wed, 17 Dec 2025 12:05:33 +0000",
+        "source": "Gizmodo",
+        "summary": "Lactating armpits, deadly burgers, and the world's nosiest parasite are some of this year's most bizzaro medical tales."
+    },
+    {
+        "id": "https://gizmodo.com/the-traveler-directors-final-destination-2000700586",
+        "title": "The Directors of \u2018Final Destination Bloodlines\u2019 May Have Their Next Sci-Fi Epic",
+        "link": "https://gizmodo.com/the-traveler-directors-final-destination-2000700586",
+        "published": "Wed, 17 Dec 2025 12:00:02 +0000",
+        "source": "Gizmodo",
+        "summary": "Zach Lipovsky and Adam Stein are attached to direct an adaptation of the sci-fi novel, 'The Traveler.'"
+    },
+    {
+        "id": "https://mashable.com/article/dec-17-jbl-tune-buds-deal",
+        "title": "JBL Tune Buds are still at their lowest-ever price at Amazon \u2014 save $60 before Christmas",
+        "link": "https://mashable.com/article/dec-17-jbl-tune-buds-deal",
+        "published": "Wed, 17 Dec 2025 11:25:51 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 17, the JBL Tune Buds are still at their lowest-ever price of $39.95 at Amazon. This is 60% off their list price of $99.95."
+    },
+    {
+        "id": "https://mashable.com/article/dec-17-sony-free-earbuds-deal",
+        "title": "The Sony XM5 headphones now come with free earbuds at Amazon",
+        "link": "https://mashable.com/article/dec-17-sony-free-earbuds-deal",
+        "published": "Wed, 17 Dec 2025 11:24:07 +0000",
+        "source": "Mashable",
+        "summary": "Find the best free earbuds deal at Amazon. Save 52% on the Sony WH-1000XM5 bundle at Amazon."
+    },
+    {
+        "id": "https://mashable.com/article/dec-17-free-ben-and-jerrys-ice-cream-bars",
+        "title": "Ben & Jerrys is launching Ice Cream Bars \u2014 get free Cookie Dough bars on Dec. 17",
+        "link": "https://mashable.com/article/dec-17-free-ben-and-jerrys-ice-cream-bars",
+        "published": "Wed, 17 Dec 2025 11:20:48 +0000",
+        "source": "Mashable",
+        "summary": "Ben & Jerry's is launching Ice Cream Bars. More than 150 Scoop Shops are handing out free Cookie Dough bars on Dec. 17."
+    },
+    {
+        "id": "https://mashable.com/article/newcastle-united-fulham-carabao-cup-2025-live-stream-for-free",
+        "title": "How to watch Newcastle United vs. Fulham online for free",
+        "link": "https://mashable.com/article/newcastle-united-fulham-carabao-cup-2025-live-stream-for-free",
+        "published": "Wed, 17 Dec 2025 11:10:07 +0000",
+        "source": "Mashable",
+        "summary": "How to watch Carabao Cup for free. Live stream Newcastle United vs. Fulham in the EFL Cup for free."
+    },
+    {
+        "id": "https://readwrite.com/fanduel-sports-network-launch-bet-tracking/",
+        "title": "FanDuel and FanDuel Sports Network launch bet tracking across NBA and NHL games",
+        "link": "https://readwrite.com/fanduel-sports-network-launch-bet-tracking/",
+        "published": "Wed, 17 Dec 2025 11:55:00 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"FanDuel and FanDuel Sports Network launch bet tracking across NBA and NHL games. Promotional graphic for FanDuel Sports Network announcing \u201cLive odds, real-time bet tracking, and account linking now built into FanDuel Sports Network.\u201d The image shows a live basketball game on a TV screen with betting odds and bet status overlays, alongside a smartphone displaying the FanDuel app and a message about linking a FanDuel Sports Network account to FanDuel Sportsbook. FanDuel logos appea"
+    },
+    {
+        "id": "https://readwrite.com/romance-fraudster-nigel-baker-stole-900000-fund-gambling-habit-jailed/",
+        "title": "Romance fraudster who stole $1.2M to fund a gambling habit jailed",
+        "link": "https://readwrite.com/romance-fraudster-nigel-baker-stole-900000-fund-gambling-habit-jailed/",
+        "published": "Wed, 17 Dec 2025 11:31:05 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Snaresbrook Crown Court from a south view. Builder ordered to repay $255K after using company assets to fund gambling. Romance fraudster Nigel Baker now jailed for stealing \u00a3900,000 to fund his gambling habit\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Builder-ordered-to-repay-255K-after-using-company-assets-to-fund-gambling-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\""
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-clear-mac-cache/",
+        "title": "How to clear your MacBook cache (and wipe out lag for good)",
+        "link": "https://www.zdnet.com/article/how-to-clear-mac-cache/",
+        "published": "Wed, 17 Dec 2025 12:10:00 GMT",
+        "source": "Latest news",
+        "summary": "If your Mac is running slow, clearing the cache can boost speed and free up space. Here's how to do it."
+    },
+    {
+        "id": "https://www.zdnet.com/article/x-plus-storm-10-review/",
+        "title": "Turning this tiny laptop into a Linux work machine was one of the best decisions I've made",
+        "link": "https://www.zdnet.com/article/x-plus-storm-10-review/",
+        "published": "Wed, 17 Dec 2025 12:08:00 GMT",
+        "source": "Latest news",
+        "summary": "The X Plus Storm 10 laptop excels at handling demanding tasks and runs Linux smoothly."
+    },
+    {
+        "id": "https://www.zdnet.com/article/squarespace-deal-zdnet-code/",
+        "title": "Get 10% off new Squarespace plans right now - here's how",
+        "link": "https://www.zdnet.com/article/squarespace-deal-zdnet-code/",
+        "published": "Wed, 17 Dec 2025 12:00:46 GMT",
+        "source": "Latest news",
+        "summary": "Need a website or e-commerce platform? Squarespace is offering an exclusive deal for our readers."
+    },
+    {
+        "id": "https://msanroman.io/blog/ai-consumption-paradigm",
+        "title": "AI's real superpower: consuming, not creating",
+        "link": "https://msanroman.io/blog/ai-consumption-paradigm",
+        "published": "Wed, 17 Dec 2025 08:34:00 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46299552\">Comments</a>"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/17/1129259/omar-yaghi-chemist-nobel-prize-crystals-water-air/",
+        "title": "This Nobel Prize\u2013winning chemist dreams of making water from thin air",
+        "link": "https://www.technologyreview.com/2025/12/17/1129259/omar-yaghi-chemist-nobel-prize-crystals-water-air/",
+        "published": "Wed, 17 Dec 2025 11:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "Omar Yaghi was a quiet child, diligent, unlikely to roughhouse with his nine siblings. So when he was old enough, his parents tasked him with one of the family\u2019s most vital chores: fetching water. Like most homes in his Palestinian neighborhood in Amman, Jordan, the Yaghis\u2019 had no electricity or running water. At least once&#8230;"
     }
 ]
