📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -17806,5 +17806,93 @@
         "published": "Wed, 17 Dec 2025 12:45:40 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46301346\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/17/skana-robotics-helps-fleets-of-underwater-robots-communicate-with-each-other/",
+        "title": "Skana\u00a0Robotics helps fleets of underwater robots communicate with each other",
+        "link": "https://techcrunch.com/2025/12/17/skana-robotics-helps-fleets-of-underwater-robots-communicate-with-each-other/",
+        "published": "Wed, 17 Dec 2025 14:05:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Skana Robotics built a decision-making algorithm that helps unmanned vessels react and adapt to data from other vessels."
+    },
+    {
+        "id": "https://www.theverge.com/games/845376/xbox-games-pass-best-games-2025",
+        "title": "The best games to play on Xbox Game Pass in 2025",
+        "link": "https://www.theverge.com/games/845376/xbox-games-pass-best-games-2025",
+        "published": "2025-12-17T09:00:34-05:00",
+        "source": "The Verge",
+        "summary": "From pervasive layoffs to continued price hikes, things didn't go so well for Xbox in 2025. But even though Game Pass, the Xbox subscription service, isn't quite the deal it once was, there are still a lot of excellent titles to check out. This was an especially good year for indie titles, with breakout hits [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/845366/apple-tv-best-shows-2025",
+        "title": "The best shows streaming on Apple TV in 2025",
+        "link": "https://www.theverge.com/entertainment/845366/apple-tv-best-shows-2025",
+        "published": "2025-12-17T09:00:28-05:00",
+        "source": "The Verge",
+        "summary": "Apple's streaming service got a new name this year - it dropped the \"plus\" and is now just Apple TV - but its actual programming didn't change all that much. And that's good news for sci-fi fans, as the service continued to cement itself as the preeminent destination for the genre in the streaming era. [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/streaming/845355/disney-plus-hulu-best-shows-2025",
+        "title": "The 10 best shows to stream on Disney Plus and Hulu from 2025",
+        "link": "https://www.theverge.com/streaming/845355/disney-plus-hulu-best-shows-2025",
+        "published": "2025-12-17T09:00:22-05:00",
+        "source": "The Verge",
+        "summary": "Disney Plus and Hulu had an eventful year. Not only did the streaming services release a swath of exciting original shows and new seasons, but they're also in the midst of a transformation that will further integrate Hulu with Disney Plus. The \"unified\" app experience will have a revamped interface that's supposed to make it [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/report/840856/google-end-of-year-recap-lawsuits-antitrust-ai-gemini-epic",
+        "title": "What could&#8217;ve been Google&#8217;s worst year turned into one of its best",
+        "link": "https://www.theverge.com/report/840856/google-end-of-year-recap-lawsuits-antitrust-ai-gemini-epic",
+        "published": "2025-12-17T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "2025 could have been a pretty disastrous year for Google. The company came in knowing it had three major legal battles to fight, increasing competition in the burgeoning AI market, and a new US president to adapt to. It looked possible - perhaps likely - that the company might be broken up and forced to [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/842852/https-www-theverge-com-tech-841025-2025-review-games-streaming-politics",
+        "title": "The Verge\u2019s 2025 in review",
+        "link": "https://www.theverge.com/entertainment/842852/https-www-theverge-com-tech-841025-2025-review-games-streaming-politics",
+        "published": "2025-12-17T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "The year 2025 has been, to put it mildly, eventful. If you\u2019re like me, you\u2019ve felt as if it\u2019s pretty much impossible to keep up with things; every day brings something new, much of it baffling or enraging. But that\u2019s not the case for everything \u2014 and so, as with past years, we\u2019re using this [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-food-gifts/",
+        "title": "15 Best Food Gifts, as Tested by Our Tastebuds (2025)",
+        "link": "https://www.wired.com/gallery/best-food-gifts/",
+        "published": "Wed, 17 Dec 2025 13:36:00 +0000",
+        "source": "WIRED",
+        "summary": "From tinned fish to baked goodies, you can deliver the best-tasting treats to their door\u2014even if you don\u2019t live close by."
+    },
+    {
+        "id": "https://arstechnica.com/science/2025/12/us-oil-industry-doesnt-see-profit-in-trumps-pro-petroleum-moves/",
+        "title": "US oil industry doesn\u2019t see profit in Trump\u2019s \u201cpro-petroleum\u201d moves",
+        "link": "https://arstechnica.com/science/2025/12/us-oil-industry-doesnt-see-profit-in-trumps-pro-petroleum-moves/",
+        "published": "Wed, 17 Dec 2025 12:30:15 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "The financial picture around drilling is moving against the Trump administration\u2019s hopes"
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2025/12/trump-spent-2025-attacking-science-that-could-set-back-his-genesis-mission/",
+        "title": "\u201cA Band-Aid on a giant gash\u201d: Trump\u2019s attacks on science may ruin his AI moonshot",
+        "link": "https://arstechnica.com/tech-policy/2025/12/trump-spent-2025-attacking-science-that-could-set-back-his-genesis-mission/",
+        "published": "Wed, 17 Dec 2025 12:00:13 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Trump\u2019s AI \u201cManhattan Project\u201d will fail if DOGE cuts are kept, critics say."
+    },
+    {
+        "id": "https://www.engadget.com/general/big-tech-bent-the-knee-for-trump-in-2025-140000365.html?src=rss",
+        "title": "Big Tech bent the knee for Trump in 2025",
+        "link": "https://www.engadget.com/general/big-tech-bent-the-knee-for-trump-in-2025-140000365.html?src=rss",
+        "published": "Wed, 17 Dec 2025 14:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Sure, we've seen <a class=\"link\" href=\"https://www.opensecrets.org/federal-lobbying/issues/summary?cycle=2025&amp;id=CPI\" target=\"_blank\">millions poured into lobbying</a> and other means of influence during every presidency, but the last two years set a whole new bar. Business leaders, including those from almost every Big Tech company, stepped over themselves to prove fealty to Donald Trump's second administration. It's easy to see why: Their kowtowing was meant to secure regulatory favors,"
+    },
+    {
+        "id": "https://uncenter.dev/posts/learning-fortran/",
+        "title": "Learning the oldest programming language (2024)",
+        "link": "https://uncenter.dev/posts/learning-fortran/",
+        "published": "Wed, 17 Dec 2025 13:25:06 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46301696\">Comments</a>"
     }
 ]
